# bing-wallpaper

./: .gitignore  README.md  app.spec  bing-wallpaper.spec  pyproject.toml
bing-wallpaper/: app.py
